--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                     <div class="titulo">
                         
-                        <img class="margel" src="M A R G E L.png" alt="">
+                        <img class="margel" src="MARGEL.png" alt="">
 
                     </div>
 
