--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="frente-dev">
 
                     <div class="logo">
-                        <img class="imagen-logo" src="../margel.jpg" alt="">
+                        <img class="imagen-logo" src="../margel.png" alt="">
                     </div>
 
                     <div class="titulo">
@@ -33,6 +33,8 @@
         <body>
             <div class="cuerpo">
                 <div class="cuerpo-dev">
+
+                    holaa
 
 
                 </div>
