--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="cuerpo">
                 <div class="cuerpo-dev">
 
-                    holaa
+                    <h2> hola </h2>
 
 
                 </div>
