--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <div class="frente-dev">
 
                     <div class="logo">
-                        <img class="imagen-logo" src="../margel.png" alt="">
+                        <img class="imagen-logo" src="margel.png" alt="">
                     </div>
 
                     <div class="titulo">
                         
-                        <img class="margel" src="../MARL.png" alt="">
+                        <img class="margel" src="MARLGEL.png" alt="">
 
                     </div>
 
